      from such kernel.
    * fixed a bug in toolchain.dat and cpu.dat, append to GLIBC_EXTRA_CONFIG
      rather than overwrite it. It might be defined both in toolchain.dat
      and cpu.dat, or it might be defined by a crosstool user, who added
      a definition to GLIBC_EXTRA_CONFIG. Before this buf fix, whichever came
      first would have been overwritten.

    gdb:
    * add gdb-6.5 final

    fix-embedded-paths.c:
    * fixed a bug in fix-embedded-paths.c. Simon Baldwin tracked a gdb crash
      down to a bug in the crosstool build scripts (they ran fix-embedded-paths.c
      on libstdc++.so, which wasn't strictly neccessary).  His proposed workaround
      is to modify fix-embedded-paths.c to use slash padding rather than space or
      null padding, and run it again on the affected libraries.

0.42:
    gcc:
    * add gcc-4.1.0 final, remove snapshots

    glibc:
    * Remove old snapshots

    binutils:
    * tweak default size of hash tables upwards; helps a few large apps.
      binutils-2.15/bfd-hash-tweak.patch
      binutils-2.16.1/bfd-hash-tweak.patch

    regtest-run.sh:
    * lower priority of ssh with 'nice'.  This really reduces the CPU load.

    demo-CPU.sh:
    * add generate-demo.pl to generate demo-CPU.sh from buildlogs/all.dats.txt.

    doc:
    * updated mac os x section of crosstool-howto.html to include tips
      on wrapping ld and as
    * add "Target Platform Notes" to crosstool-howto.html to include the target
      platform specific notes for building crosstool using demo-CPU.sh.

0.41:
    crosstool.sh:
    * brought back mkoverride.sh, so installed toolchain has easy
      place to get just libgcc_s.so and libstdc++.so for use with
      ldconfig or -Wl,-rpath.

    getandpatch.sh:
    * Added missing .gz filename after .bz2 for getting gcc-?.?-200* (Martin Guy)

    all.sh:
    * Remove old PREFIX dir in background for speed (Martin Guy)

    general:
    * updated from linux-2.6.11.3 to linux-2.6.15.4